--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <p>... a practicar codeando.</p>
     <p>Y como siempre digo: todos los días de aprende algo. <br/>
     Hoy: que podemos usar &#128079; en HTML &#128521; .</p>
-    
+
+    <h4>Si queres verlo gráfico: </h4>
+    <img src="daychallenge.jpg" alt="an image of this html file" target="_blank"> 
 </body>
 </html>
